Bug 365173 - Closing an app via pop up from taskmanager switches to the next app
Summary: Closing an app via pop up from taskmanager switches to the next app
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.7.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-06 21:50 UTC by kthiele
Modified: 2016-07-14 11:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kthiele 2016-07-06 21:50:15 UTC
If you have multiple apps open and multiple instances of each and close one via the pop up overview it jumps to the pop up of the first app in the Task manager

Reproducible: Always

Steps to Reproduce:
1. Have icons only task manager activated (for quicker testing, because stacked instances of apps are important)
2. open two or more applications
3. open multiple instances of all apps (except the first one if you don't want to it's not important)
4. go to the pop up overview of an app and close it

Actual Results:  
Your pop up will switch to the first app in the task manage

Expected Results:  
stay at the pop up of the app that you were closing to be able to close the other instances
Comment 1 Eike Hein 2016-07-10 09:03:53 UTC
This is partially fixed by 901e76e4b0 in plasma-desktop.git, but there's a second bug where the internal manual sort map for group members can get screwed up, causing the remaining entry in a group to leap to a different position on the bar when the other group members are closed, causing havoc with the delegates, which the ToolTipArea are a child of. I'm still debugging; it's a bit tricky to nail down.
Comment 2 Eike Hein 2016-07-14 11:03:26 UTC
Git commit 56ea0f5947ac3ef285acca2981324c9afbb1c5ec by Eike Hein.
Committed on 14/07/2016 at 11:00.
Pushed by hein into branch 'Plasma/5.7'.

Adjust indices in manual sort map by removal delta after removal, not leading up to it.

In practice the parent will no longer jump around when a group is dissolved
by dropping the member count to 1 by deleting the 'lead' entry (the source
index the parent maps to). When doing this from the group's tooltip, the
delegate would run amok as a result.

M  +2    -2    libtaskmanager/tasksmodel.cpp

http://commits.kde.org/plasma-workspace/56ea0f5947ac3ef285acca2981324c9afbb1c5ec