Adjust indices in manual sort map by removal delta after removal, not leading up to it.

In practice the parent will no longer jump around when a group is dissolved
by dropping the member count to 1 by deleting the 'lead' entry (the source
index the parent maps to). When doing this from the group's tooltip, the
delegate would run amok as a result.

BUG:365173